--- a/index.html
+++ b/index.html
@@ -91,29 +91,36 @@
     }
   </style>
 
-  <!-- Google Analytics 代码 -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-ER1N8KVZPZ"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+<!-- Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ER1N8KVZPZ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-    // 配置 Google Analytics，自动记录页面路径
-    gtag('config', 'G-ER1N8KVZPZ', {
-      'cookie_domain': 'zalem.app',
-      'cookie_flags': 'SameSite=None;Secure',
-      'page_path': window.location.pathname
-    });
+  // 自动识别路径并记录语言属性
+  const languageMap = {
+    '/jp': 'Japanese',
+    '/cn': 'Chinese',
+    '/en': 'English',
+    '/vn': 'Vietnamese',
+    '/kr': 'Korean'
+  };
+  const currentPath = window.location.pathname;
+  const currentLanguage = languageMap[currentPath] || 'Unknown';
 
-    // 自定义事件：记录用户点击语言按钮的行为
-    function trackLanguageSelection(language) {
-      gtag('event', 'language_select', {
-        'event_category': 'Language Selection',
-        'event_label': language, // 语言名称
-        'value': 1 // 固定值，用于统计点击事件
-      });
-    }
-  </script>
+  // 配置页面路径
+  gtag('config', 'G-ER1N8KVZPZ', {
+    'page_path': currentPath
+  });
+
+  // 自定义事件记录语言属性
+  gtag('event', 'set_language', {
+    'event_category': 'Language',
+    'event_label': currentLanguage,
+    'value': 1
+  });
+</script>
 </head>
 <body>
   <div class="container">
