--- a/cn/index.html
+++ b/cn/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>zalem.app</title>
+  <title>zalem.app - CN</title>
   <style>
     body {
       font-family: Arial, sans-serif;
