--- a/cn/index.html
+++ b/cn/index.html
@@ -126,7 +126,12 @@
       display:flex;
       padding: 10px;
       gap: 10px; /* 项目间距 */
-      scrollbar-width:none;
+      scrollbar-width: none; /* Firefox 隐藏滚动条 */
+      -ms-overflow-style: none; /* Internet Explorer 10+ 隐藏滚动条 */
+    }
+
+    #slider-banner-container::-webkit-scrollbar {
+      display: none; /* 隐藏 Chrome, Safari 和 Edge 的滚动条 */
     }
     .slider-item {
       display: inline-block;
@@ -257,12 +262,19 @@
       /* 去除换行 */
       flex-wrap: nowrap;
       overflow-x: auto;
+      -ms-overflow-style: none; /* 适用于 IE10+ */
+      scrollbar-width: none; /* 适用于 Firefox */
     }
+
+    #random-option::-webkit-scrollbar {
+      display: none; /* 隐藏滚动条（Chrome, Safari, Edge） */
+    }
+
     #random-option label {
       display: inline-flex;
       align-items: center;
       cursor: pointer;
-      padding: 6px 10px;
+      padding: 6px 6px;
       border: 1px solid #666;
       border-radius: 5px;
       background: #fff;
@@ -425,7 +437,7 @@
       position: absolute;
       bottom: 0;
       width: 100%;
-      height: 15vh;
+      height: 12vh;
       background-color: #24A148; /* Uber Eats 风格绿色 */
       border-top-left-radius: 50% 20vw;
       border-top-right-radius: 50% 20vw;
@@ -799,9 +811,9 @@
   let isDragging = false;
   let startX = 0;
   let scrollStart = 0;
-  let lastScrollLeft = 0.1;  // 用于计算惯性
+  let lastScrollLeft = 0.2;  // 用于计算惯性
   let momentum = 0;        // 慯性计算（阻尼效果）
-  let inertiaFactor = 1; // 惯性系数，决定滑动的距离
+  let inertiaFactor = 2; // 惯性系数，决定滑动的距离
   let dampingFactor = 0.1; // 阻尼系数，决定滑动减缓的速度
 
   // 开始拖拽
