--- a/cn/index.html
+++ b/cn/index.html
@@ -9,8 +9,10 @@
      * 1. 全局样式 & 布局调整
      *******************************************************/
     body {
-      overflow-x: hidden;  /* 禁止水平滚动 */
-      position: relative;  /* 防止因某些布局引起的位移 */
+      width: 100%;
+  overflow-x: hidden;  /* 禁止横向滚动 */
+  margin: 0;  /* 防止页面产生边距 */
+  padding: 0;  /* 防止页面产生内边距 */
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
@@ -18,6 +20,15 @@
       box-sizing: border-box;
       color: #333;
     }
+
+    * {
+  box-sizing: border-box;  /* 确保所有元素的大小包括边距和内边距 */
+}
+
+img, iframe, .container, .content {
+  max-width: 100%;  /* 确保图片和其他元素不会超出容器的宽度 */
+  height: auto;  /* 保持比例 */
+}
     /* 顶部标题: 不再使用纯蓝色背景，改用浅灰底，文字加粗 */
     h1 {
       text-align: center;
